Added eruda loading script

--- a/web/index.html
+++ b/web/index.html
@@ -17,6 +17,7 @@
         <div class="main_screen panels"></div>
         <div class="additional panels"></div>
     </main>
+    <script src="./js/eruda_load.js"></script>
     <script src="./js/main.js"></script>
 </body>
 </html>
