Updated styles and scripts

--- a/web/index.html
+++ b/web/index.html
@@ -13,7 +13,9 @@
                 <option value="default">...</option>
             </select>
         </div>
-        <div class="inventory panels"></div>
+        <div class="inventory panels">
+            <div id="inventory_items"></div>
+        </div>
         <div class="main_screen panels"></div>
         <div class="additional panels"></div>
     </main>
