more style updates and html changes

--- a/web/index.html
+++ b/web/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <title>Azira's Adventure - Idle RPG Game</title>
 </head>
+
 <body>
     <main>
         <div class="info_bar">
@@ -15,6 +17,11 @@
         </div>
         <div class="inventory panels">
             <div id="inventory_items"></div>
+            <div id="page_nav">
+                <img src="" alt="" class="page_nav left">
+                <span>Page: <span id="inventory_page_num"></span></span>
+                <img src="" alt="" class="page_nav right">
+            </div>
         </div>
         <div class="main_screen panels"></div>
         <div class="additional panels"></div>
@@ -22,4 +29,5 @@
     <script src="./js/eruda_load.js"></script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
