--- a/web/index.html
+++ b/web/index.html
@@ -11,6 +11,7 @@
 <body>
     <main>
         <div class="info_bar">
+            <label for="stats">Stats: </label>
             <select name="stats" id="stats" value="default" title="View stats">
                 <option value="default">...</option>
             </select>
