--- a/web/index.html
+++ b/web/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/main.css">
     <title>Azira's Adventure - Idle RPG Game</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap');
+    </style>
 </head>
 
 <body>
@@ -19,9 +22,9 @@
         <div class="inventory panels">
             <div id="inventory_items"></div>
             <div id="page_nav">
-                <img src="" alt="" class="page_nav left">
+                <span class="page_nav_button"><</span>
                 <span>Page: <span id="inventory_page_num"></span></span>
-                <img src="" alt="" class="page_nav right">
+                <span class="page_nav_button">></span>
             </div>
         </div>
         <div class="main_screen panels"></div>
