--- a/web/index.html
+++ b/web/index.html
@@ -34,10 +34,9 @@
         <div class="inventory panels">
             <div id="inventory_items"></div>
             <div id="page_nav">
-                <span class="page_nav_button">
-                    << /span>
-                        <span>Page: <span id="inventory_page_num"></span></span>
-                        <span class="page_nav_button">></span>
+                <span class="page_nav_button"><</span>
+                <span>Page: <span id="inventory_page_num"></span></span>
+                <span class="page_nav_button">></span>
             </div>
         </div>
         <div class="main_screen panels"></div>
