removed inline styles

--- a/web/index.html
+++ b/web/index.html
@@ -14,10 +14,7 @@
 <body>
     <main>
         <div class="info_bar">
-            <div style="
-    font-size: small;
-    font-weight: 900;
-" class="hud_stat_container">
+            <div class="hud_stat_container">
                 <span>Mana:</span>
                 <div class="stat_slider">
                     <div class="stat_slider_val"></div>
