--- a/web/index.html
+++ b/web/index.html
@@ -15,11 +15,16 @@
     <main>
         <div class="info_bar">
             <div class="hud_stat_container">
+                <span>Health:</span>
+                <div class="stat_slider">
+                    <div class="stat_slider_val current_health"></div>
+                </div>
+                <span><span id="current_health">50</span>/<span id="max_health">100</span></span>
                 <span>Mana:</span>
                 <div class="stat_slider">
-                    <div class="stat_slider_val"></div>
+                    <div class="stat_slider_val current_mana"></div>
                 </div>
-                <span><span>50</span>/<span>100</span></span>
+                <span><span id="current_mana">50</span>/<span id="max_mana">100</span></span>
             </div>
             <div>
                 <label for="stats">Stats: </label>
@@ -29,14 +34,59 @@
             </div>
         </div>
         <div class="inventory panels">
-            <div id="inventory_items"></div>
-            <div id="page_nav">
-                <span class="page_nav_button"><</span>
-                <span>Page: <span id="inventory_page_num"></span></span>
-                <span class="page_nav_button">></span>
+            <div>
+                <div id="inventory_items"></div>
+                <div id="page_nav">
+                    <span class="page_nav_button"><</span>
+                    <span>Page: <span id="inventory_page_num"></span></span>
+                    <span class="page_nav_button">></span>
+                </div>
             </div>
         </div>
-        <div class="main_screen panels"></div>
+        <div class="main_screen panels">
+            <style>
+                .main_screen {
+                    * {
+                        font-family: Quicksand, Montserrat, Nunito, system-ui;
+                    }
+
+                    h1 {
+                        font-size: 3rem;
+                    }
+
+                    h2 {
+                        font-size: 2rem;
+                        color: white;
+                    }
+
+                    p {
+                        font-size: large;
+                        font-weight: 600;
+                        line-height: 1.1;
+                    }
+
+                    a {
+                        text-shadow: 0px 0px .5rem white;
+                        text-decoration: none;
+                        transition: font-size 1s ease-out;
+                    }
+
+                    a:any-link {
+                        color: transparent;
+                    }
+
+                    a:hover {
+                        font-size: 1.25rem;
+                    }
+                }
+            </style>
+            <div>
+                <h1>Welcome to Azira's Adventure</h1>
+                <h2>🚧</h2>
+                <p>This game is still in development. Please send any suggestions to the game 
+                    <a href="" target="_blank">Discord</a> server.</p>
+            </div>
+        </div>
         <div class="additional panels"></div>
     </main>
     <script src="./js/eruda_load.js"></script>
