--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,7 @@
                 .main_screen {
                     * {
                         font-family: Quicksand, Montserrat, Nunito, system-ui;
+                        user-select: none;
                     }
 
                     h1 {
@@ -84,7 +85,7 @@
                 <h1>Welcome to Azira's Adventure</h1>
                 <h2>🚧</h2>
                 <p>This game is still in development. Please send any suggestions to the game 
-                    <a href="" target="_blank">Discord</a> server.</p>
+                    <a href="https://discord.gg/" target="_blank">Discord</a> server.</p>
             </div>
         </div>
         <div class="additional panels"></div>
