--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,8 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Quicksand:wght@300..700&display=swap');
     </style>
     <script src="./js/head.js"></script>
-    <script src="./js/classes.js" defer></script>
-    <script src="./js/type_anim.js" defer></script>
-    <script src="./js/jdropdown.js" defer></script>
+    <script src="./js/classes.js"></script>
+    <script src="./js/jdropdown.js"></script>
 </head>
 
 <body>
@@ -66,6 +65,7 @@
                         font-size: large;
                         font-weight: 600;
                         line-height: 1.1;
+                        align-content: center;
                     }
 
                     a {
@@ -75,11 +75,12 @@
                     }
 
                     a:any-link {
-                        color: transparent;
+                        color: white;
+                        font-size: 1.25rem;
                     }
 
                     a:hover {
-                        font-size: 1.25rem;
+                        font-size: 1.5rem;
                     }
                 }
             </style>
@@ -92,8 +93,9 @@
         </div>
         <div class="additional panels"></div>
     </main>
-    <script src="./js/eruda_load.js"></script>
+    <script src="./js/type_anim.js"></script>
     <script src="./js/main.js"></script>
+    <script src="./js/eruda_load.js"></script>
 </body>
 
 </html>
